fix: text align
UBR-306

--- a/src/components/AboutComponents/AboutUtil/style.module.css
+++ b/src/components/AboutComponents/AboutUtil/style.module.css
@@ -209,6 +209,7 @@
   display: flex;
   /* margin: 10px; */
   gap: 16px;
+  text-align: left;
 }
 
 .link_header>img {
